*SVN*

* Fix logic error in determining what was loaded by a given file. Closes #6039. [Nicholas Seckar]

* Equate Kernel.const_missing with Object.const_missing. Fixes #5988. [Nicholas Seckar]

* Add ApplicationController special case to Dependencies. [Nicholas Seckar]

* Don't pad remaining places with in_groups_of if specified padding value is false. [Marcel Molina Jr.]

* Fix cases where empty xml nodes weren't being translated to nil in Hash.create_from_xml [Rick Olson]

  <written-on type="date"></written-on> # => { :type => 'date' } # WRONG
  <written-on type="date"></written-on> # => nil # RIGHT

* Tighten rescue clauses.  #5985 [james@grayproductions.net]

* Inflections: don't singularize -ies plurals.  [foamdino@gmail.com, Mark Van Holstyn]

* Update Initializer to use load_once_paths to avoid plugin reloading. References #5852. [Nicholas Seckar]

* Use Array#assoc in ActiveSupport::OrderedHash. [Mauricio Fernandez]

* Greatly increased performance of String.to_json, which speeds up RJS considerably on large pages, fixes #3473 [Shugo Maeda]

* Detect missing_constants calls from removed modules and fail accordingly. [Nicholas Seckar]

* Stop using defined? in Dependencies.qualified_const_defined? since defined? may invoke const_missing. [Nicholas Seckar]

* Dependencies can autoload directories of nested classes. [Jeremy Kemper]
    Example:
      invoice.rb            class Invoice
      invoice/lineitem.rb   class Invoice::Lineitem

* Add Deprecation.silence so that Reloadable does not scold itself. [Nicholas Seckar]

* Add debugging logging to Dependencies. Currently can be enabled with Dependencies.log_activity = true; adding to Initializer and documenting is forthcoming. [Nicholas Seckar]

* Replace Reloadable with improvements to the Dependencies mechanism. [Nicholas Seckar]

* DateTime#to_time gives hour/minute/second resolution.  #5747 [jon.evans@pobox.com]
